# ChainSense

./: .gitignore  .vercelignore  03_kmeans_clustering.ipynb.ipynb  README.md  data  pyproject.toml  requirements.txt  subscriber.py
analyst_data/: cluster_profiles.csv  smart_money_daily_flow.parquet  smart_money_daily_methods_top10.parquet  smart_money_hourly_flow.parquet  smart_money_hourly_methods_top3.parquet  smart_money_token_transfers.parquet  top_20_selectors.parquet
backend/: app.py
config/: archetypes.json
dashboard/: app.py  appv2.py
dashboard/public/: cluster_archetypes.json  family_summary.json  feature_groups.json  inspector_sample.json  model_stats.json  scaler_v5.joblib  top20selectors.json  wallet_projections.parquet
data/: bronze
data/streaming/: blocks.parquet
docs/: ChainSense Meeting Minutes.md  REPORT_skeleton.md
notebooks/: 00_explore.ipynb  01_exploration.ipynb  01_ingestion.ipynb  02_feature_analysis.ipynb  02_feature_extraction.ipynb  02_features.ipynb  03_clustering copy.ipynb  03_clustering.ipynb  04_research.ipynb  08_analyst.ipynb
scripts/: build_frontend_data.py  build_snapshot.py  run_pipeline.py  run_subscriber.py  validate_clusters.py  validate_data.py  validate_features.py
src/: subscriber.py
src/features/: __init__.py  scaling.py  wallet_features.py
src/ingestion/: classify_addresses.py  fetch_blocks.py  fetch_logs.py  fetch_receipts.py  rpc.py  watermark.py
src/models/: __init__.py  clustering.py  evaluation.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+49 files in other folders)
